@@ -1,1 +1,1 @@
-../../build/Release-iphoneos/ZBarSDK
+../../build/Debug-iphoneos/ZBarSDK
